--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = "header">
-        Header logo
+        <h1>Header Logo</h1>
         <ul>
             <li><a href="">header link one</a></li>
             <li><a href="">header link two</a></li>
@@ -18,12 +18,12 @@
     </div>
         
     <div class = "first">
-        <div>
+        <div class = "content">
             <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It;s a smaller font and the color is a lower contrast.</p>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
             <button>Sign Up</button>
         </div>
-        <img src="" alt="">
+        <img src="wow.webp" alt="" width="200px" height="auto">
     </div>
 
     <div class = "info">
