Finished info section

--- a/index.html
+++ b/index.html
@@ -30,24 +30,44 @@
         <h1>Some random information.</h1>
         <div class = "container">
             <div>
-                <img src="" alt="">
-                this is some subtext under an illustration or image
+                <div class="box">
+                </div>
+                <p>
+                    this is some subtext under an illustration or image
+                </p>
             </div>
             <div>
-                <img src="" alt="">
-                this is some subtext under an illustration or image
-            </div>            <div>
-                <img src="" alt="">
-                this is some subtext under an illustration or image
-            </div>            <div>
-                <img src="" alt="">
-                this is some subtext under an illustration or image
+                <div class="box">
+                </div>
+                <p>
+                    this is some subtext under an illustration or image
+                </p>
+            </div>            
+            <div>
+                <div class="box">
+                </div>
+                <p>
+                    this is some subtext under an illustration or image
+                </p>
+            </div>            
+            <div>
+                <div class="box">
+                </div>
+                <p>
+                    this is some subtext under an illustration or image
+                </p>
             </div>
         </div>
     </div>
 
     <div class = "quote">
-        wow quote - wow
+        <p class = "content">
+
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice 
+        </p>
+        <p class = "author">
+            - Thor, God of Thunder
+        </p>
     </div>
 
     <div class = "signup">
