--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     </div>
 
     <div class = "quote">
-        <p class = "content">
-
+        <p>
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice 
         </p>
         <p class = "author">
@@ -72,10 +71,12 @@
 
     <div class = "signup">
         <div class="content">
-            Call to action! It's time!
-            Sign up for our product by clicking that button right over there!
-        </div>
+            <p>
+                <b>Call to action! It's time!</b><br>
+                Sign up for our product by clicking that button right over there!
+            </p>
             <button>Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
