--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
             <button>Sign Up</button>
         </div>
-        <img src="wow.webp" alt="" width="200px" height="auto">
+        <div class = "placeholder">
+            <p>this is a placeholder for an image</p>
+        </div>
     </div>
 
     <div class = "info">
@@ -61,7 +63,7 @@
     </div>
 
     <div class = "quote">
-        <p>
+        <p class = "content">
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice 
         </p>
         <p class = "author">
